# MiniDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  minidb_structure.json
data/: demo.sql  sample_queries.sql
docs/: USAGE.md
examples/: simple_example.cpp
src/: CMakeLists.txt  minidb.cpp
src/cli/: main.cpp
src/core/: btree.cpp  hashmap.cpp
src/query/: executor.cpp  parser.cpp
src/storage/: page_manager.cpp  table.cpp
src/utils/: cli.cpp
tests/: CMakeLists.txt  test_btree.cpp  test_hashmap.cpp  test_main.cpp
